<resources>
    <string name="app_name">TasteTracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email">  Email</string>
    <string name="pass">  Password</string>
    <string name="signup">Continue With Google</string>
    <string name="signupLink">Dont Have Acount? <u>SignUp</u></string>
    <string name="loginLink">Have Acount? <u>Login</u></string>
    <string name="welcom_back">Welcom Back</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="fav">Fav</string>
    <string name="plan">Plan</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="all_categories">All Categories</string>
    <string name="all_countries">All Countries</string>
    <string name="favourites">Favourites</string>
    <string name="welcom_to_our_app">Welcom to our App</string>
    <string name="add_to_fav">Add To Fav</string>
    <string name="emptyfav">No Favorite Meals</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="thursday">Thursday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="country">Country</string>
    <string name="category">Category</string>
    <string name="ingrediant">Ingrediant</string>
    <string name="defult_web_clint_id">55553294447126-3lkg0v6necb3g96v06hud12jie94as0b.apps.googleusercontent.com</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="please_fill_in_all_the_fields">Please fill in all the fields</string>
    <string name="wrong_email_or_password">Wrong Email Or Password</string>
    <string name="ok">Ok</string>
    <string name="sign_up_for_more_details">Sign up for more details</string>
    <string name="logout">Logout</string>
    <string name="welcom">Welcome to TasteTracker</string>
    <string name="delete_from_fav">Delete from Fav</string>
    <string name="confirm_passwords_do_not_match_password">Confirm Passwords do not match Password</string>
</resources>