<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.auth.LoginFragment">


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins_light_italic"
        android:hint="@string/Email"
        tools:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPass"
            android:layout_width="273dp"
            android:layout_height="59dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/pass"
            android:fontFamily="@font/poppins_light_italic"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="43dp"
        android:backgroundTint="@color/login"
        android:text="@string/login"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_light_italic"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPass" />


    <TextView
        android:id="@+id/signup"
        android:layout_width="303dp"
        android:layout_height="53dp"
        android:layout_marginStart="54dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/poppins_light_italic"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/signupLink"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/gustLogin"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="643dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/welcom_back"
        android:textColor="@color/white"
        android:textSize="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gustLogin"
        android:layout_width="273dp"
        android:layout_height="59dp"
        android:fontFamily="@font/poppins_light_italic"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="101dp"
        android:backgroundTint="@color/login"
        android:text="@string/skip"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:layout_marginStart="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>