<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchfrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".view.search.SearchFragment">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/searchbackground"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipsgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        app:singleSelection="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView">

        <com.google.android.material.chip.Chip
            android:id="@+id/country"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:backgroundTint="@color/home_card_color"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/dancing_script_bold"
            android:text="@string/country"
            android:textColor="@color/home_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/category"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:backgroundTint="@color/home_card_color"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/dancing_script_bold"
            android:text="@string/category"
            android:textColor="@color/home_background" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingrediant"
            android:backgroundTint="@color/home_card_color"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/dancing_script_bold"
            android:text="@string/ingrediant"
            android:textColor="@color/home_background" />
    </com.google.android.material.chip.ChipGroup>

    <GridView
        android:id="@+id/searchgridview"
        android:numColumns="3"
        tools:listitem="@layout/country_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipsgroup" />

</androidx.constraintlayout.widget.ConstraintLayout>